# yProv4ML_MLflow_Plugin

./: .gitignore  INSTALL.md  README.md  emissions.csv  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
examples/: demo.py  mnist_mlflow_demo.py  run_batch.py
mlflow-yprov4ml-plugin/: store.py
mlruns/0/: meta.yaml
mlruns/233688517632101821/: meta.yaml
mlruns/233688517632101821/24f32a12798e47fb816768111255a49c/: meta.yaml
mlruns/233688517632101821/24f32a12798e47fb816768111255a49c/metrics/: loss
mlruns/233688517632101821/24f32a12798e47fb816768111255a49c/tags/: mlflow.runName
mlruns/233688517632101821/a4df5e28eee14052b44e1bf6fc4a0633/: meta.yaml
mlruns/233688517632101821/a4df5e28eee14052b44e1bf6fc4a0633/metrics/: loss
mlruns/233688517632101821/a4df5e28eee14052b44e1bf6fc4a0633/tags/: mlflow.source.git.commit  mlflow.source.name
outputs/: config.json  lr_trace.csv  model.pt
plugin/: INSTALL.md  Makefile  README.md  pyproject.toml  requirements-dashboard.txt  requirements-dev.txt  requirements-examples.txt  requirements.txt
plugin/examples/: demo.py  mnist_mlflow_demo.py
plugin/test/: conftest.py  test_yprov_logging.py
plugin/yprov_mlflow_plugin/: __init__.py  artifacts.py  prov_export.py
src/: decision_app.py  import_prov_to_mlflow.py  prov_to_csv.py
test/: test_artifacts.py  test_integration.py  test_plugin_works.py  test_simple.py  test_store.py  test_yprov_logging.py  verify_installation.py
yprov_mlflow_plugin/: __init__.py  artifacts.py  prov_export.py  tracking.py
