[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yprov-mlflow-plugin"
version = "0.0.1"
description = "MLflow tracking store & artifact repo plugin that mirrors to yProv4ML"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.9"

# Core dependencies – only what the plugin itself needs at runtime.
# prov4ml must be installed separately from the upstream fork (see INSTALL below).
dependencies = [
  "mlflow>=2.3",
]

[project.optional-dependencies]
# Training examples (examples/demo.py, examples/mnist_mlflow_demo.py)
examples = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "numpy>=1.23",
  "codecarbon>=2.3.0",
  "psutil>=5.9.0",
]

# Streamlit decision-support dashboard (src/decision_app.py)
dashboard = [
  "streamlit>=1.30.0",
  "pandas>=2.0.0",
  "plotly>=5.18",
  "scikit-learn>=1.3",
  "shap>=0.42.0",
]

# NetCDF metric export support
netcdf = [
  "xarray>=2023.1.0",
  "netCDF4>=1.6.0",
]

# CSV / PROV-to-CSV utilities (src/prov_to_csv.py)
utils = [
  "pandas>=2.0.0",
]

# Test suite
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0",
]

# Everything for local development
dev = [
  "yprov-mlflow-plugin[examples,dashboard,netcdf,utils,test]",
  "ruff>=0.4",
  "mypy>=1.8",
  "pre-commit>=3.5",
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["yprov_mlflow_plugin*"]

# ---------------------------------------------------------------------------
# MLflow plugin entry points
# ---------------------------------------------------------------------------
[project.entry-points."mlflow.tracking_store"]
"yprov+http"  = "yprov_mlflow_plugin.tracking:YProvTrackingStore"
"yprov+https" = "yprov_mlflow_plugin.tracking:YProvTrackingStore"
"yprov+file"  = "yprov_mlflow_plugin.tracking:YProvTrackingStore"

[project.entry-points."mlflow.artifact_repository"]
"yprov+file"  = "yprov_mlflow_plugin.artifacts:YProvArtifactRepo"
"yprov+http"  = "yprov_mlflow_plugin.artifacts:YProvArtifactRepo"
"yprov+https" = "yprov_mlflow_plugin.artifacts:YProvArtifactRepo"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["test"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
